{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 26,
  "lineage": "acf9b013-1eaf-c0ad-7270-cba71c967701",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:746842711613:network-acl/acl-0512afc892b613dcb",
            "default_network_acl_id": "acl-0512afc892b613dcb",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0512afc892b613dcb",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "746842711613",
            "subnet_ids": [
              "subnet-06a2f7ecc2fca1949",
              "subnet-08edadd5c00c121dd",
              "subnet-0ab96d30da6f8d48b",
              "subnet-0f6e211e90e21b60d"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "vpc-module-default",
              "Terraform": "true",
              "team": "Devops"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-module-default",
              "Terraform": "true",
              "team": "Devops"
            },
            "vpc_id": "vpc-0a6b96f0a708eb909"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:746842711613:route-table/rtb-0697146a669f164e3",
            "default_route_table_id": "rtb-0697146a669f164e3",
            "id": "rtb-0697146a669f164e3",
            "owner_id": "746842711613",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "vpc-module-default",
              "Terraform": "true",
              "team": "Devops"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-module-default",
              "Terraform": "true",
              "team": "Devops"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0a6b96f0a708eb909"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:746842711613:security-group/sg-0d05a0329522b6a96",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0d05a0329522b6a96",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "746842711613",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "vpc-module-default",
              "Terraform": "true",
              "team": "Devops"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-module-default",
              "Terraform": "true",
              "team": "Devops"
            },
            "vpc_id": "vpc-0a6b96f0a708eb909"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09e99b6abfc223d32",
            "association_id": "eipassoc-066c2d3d89a5b8d4b",
            "domain": "vpc",
            "id": "eipalloc-09e99b6abfc223d32",
            "network_border_group": "us-east-1",
            "network_interface": "eni-043717851ea514ecd",
            "private_dns": "ip-10-0-101-137.ec2.internal",
            "private_ip": "10.0.101.137",
            "public_dns": "ec2-44-205-116-194.compute-1.amazonaws.com",
            "public_ip": "44.205.116.194",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-module-us-east-1a",
              "Terraform": "true",
              "team": "Devops"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-module-us-east-1a",
              "Terraform": "true",
              "team": "Devops"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ae1a5eac66d29815",
            "association_id": "eipassoc-008e2703db30f00bd",
            "domain": "vpc",
            "id": "eipalloc-0ae1a5eac66d29815",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0d6d83df82166d773",
            "private_dns": "ip-10-0-102-81.ec2.internal",
            "private_ip": "10.0.102.81",
            "public_dns": "ec2-52-21-125-106.compute-1.amazonaws.com",
            "public_ip": "52.21.125.106",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-module-us-east-1b",
              "Terraform": "true",
              "team": "Devops"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-module-us-east-1b",
              "Terraform": "true",
              "team": "Devops"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:746842711613:internet-gateway/igw-065272e3c78db1698",
            "id": "igw-065272e3c78db1698",
            "owner_id": "746842711613",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-module",
              "Terraform": "true",
              "team": "Devops"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-module",
              "Terraform": "true",
              "team": "Devops"
            },
            "vpc_id": "vpc-0a6b96f0a708eb909"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09e99b6abfc223d32",
            "association_id": "eipassoc-066c2d3d89a5b8d4b",
            "connectivity_type": "public",
            "id": "nat-004f9d3def026b42f",
            "network_interface_id": "eni-043717851ea514ecd",
            "private_ip": "10.0.101.137",
            "public_ip": "44.205.116.194",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f6e211e90e21b60d",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-module-us-east-1a",
              "Terraform": "true",
              "team": "Devops"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-module-us-east-1a",
              "Terraform": "true",
              "team": "Devops"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ae1a5eac66d29815",
            "association_id": "eipassoc-008e2703db30f00bd",
            "connectivity_type": "public",
            "id": "nat-0086f8cdddbaf0f21",
            "network_interface_id": "eni-0d6d83df82166d773",
            "private_ip": "10.0.102.81",
            "public_ip": "52.21.125.106",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ab96d30da6f8d48b",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-module-us-east-1b",
              "Terraform": "true",
              "team": "Devops"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-module-us-east-1b",
              "Terraform": "true",
              "team": "Devops"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0bfdbf21b5c4324d81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-004f9d3def026b42f",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bfdbf21b5c4324d8",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f53ad9a651e8bbae1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0086f8cdddbaf0f21",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f53ad9a651e8bbae",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-065272e3c78db1698",
            "id": "r-rtb-03ddc6040de8d4f801080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03ddc6040de8d4f80",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:746842711613:route-table/rtb-0bfdbf21b5c4324d8",
            "id": "rtb-0bfdbf21b5c4324d8",
            "owner_id": "746842711613",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-004f9d3def026b42f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "vpc-module-private-us-east-1a",
              "Terraform": "true",
              "team": "Devops"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-module-private-us-east-1a",
              "Terraform": "true",
              "team": "Devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6b96f0a708eb909"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:746842711613:route-table/rtb-0f53ad9a651e8bbae",
            "id": "rtb-0f53ad9a651e8bbae",
            "owner_id": "746842711613",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0086f8cdddbaf0f21",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "vpc-module-private-us-east-1b",
              "Terraform": "true",
              "team": "Devops"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-module-private-us-east-1b",
              "Terraform": "true",
              "team": "Devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6b96f0a708eb909"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:746842711613:route-table/rtb-03ddc6040de8d4f80",
            "id": "rtb-03ddc6040de8d4f80",
            "owner_id": "746842711613",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-065272e3c78db1698",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "vpc-module-public",
              "Terraform": "true",
              "team": "Devops"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-module-public",
              "Terraform": "true",
              "team": "Devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6b96f0a708eb909"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08c44a688f01eb85c",
            "route_table_id": "rtb-0bfdbf21b5c4324d8",
            "subnet_id": "subnet-06a2f7ecc2fca1949"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ac98ea256799fca5",
            "route_table_id": "rtb-0f53ad9a651e8bbae",
            "subnet_id": "subnet-08edadd5c00c121dd"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00f048d4d885098b7",
            "route_table_id": "rtb-03ddc6040de8d4f80",
            "subnet_id": "subnet-0f6e211e90e21b60d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0afd5905e9f4fc632",
            "route_table_id": "rtb-03ddc6040de8d4f80",
            "subnet_id": "subnet-0ab96d30da6f8d48b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:746842711613:subnet/subnet-06a2f7ecc2fca1949",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06a2f7ecc2fca1949",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "746842711613",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-module-private-us-east-1a",
              "Terraform": "true",
              "team": "Devops"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-module-private-us-east-1a",
              "Terraform": "true",
              "team": "Devops"
            },
            "vpc_id": "vpc-0a6b96f0a708eb909"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:746842711613:subnet/subnet-08edadd5c00c121dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08edadd5c00c121dd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "746842711613",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-module-private-us-east-1b",
              "Terraform": "true",
              "team": "Devops"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-module-private-us-east-1b",
              "Terraform": "true",
              "team": "Devops"
            },
            "vpc_id": "vpc-0a6b96f0a708eb909"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:746842711613:subnet/subnet-0f6e211e90e21b60d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f6e211e90e21b60d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "746842711613",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-module-public-us-east-1a",
              "Terraform": "true",
              "team": "Devops"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-module-public-us-east-1a",
              "Terraform": "true",
              "team": "Devops"
            },
            "vpc_id": "vpc-0a6b96f0a708eb909"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:746842711613:subnet/subnet-0ab96d30da6f8d48b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ab96d30da6f8d48b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "746842711613",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-module-public-us-east-1b",
              "Terraform": "true",
              "team": "Devops"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-module-public-us-east-1b",
              "Terraform": "true",
              "team": "Devops"
            },
            "vpc_id": "vpc-0a6b96f0a708eb909"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:746842711613:vpc/vpc-0a6b96f0a708eb909",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0512afc892b613dcb",
            "default_route_table_id": "rtb-0697146a669f164e3",
            "default_security_group_id": "sg-0d05a0329522b6a96",
            "dhcp_options_id": "dopt-0128b9a88df6e0c27",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a6b96f0a708eb909",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0697146a669f164e3",
            "owner_id": "746842711613",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-module",
              "Terraform": "true",
              "team": "Devops"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-module",
              "Terraform": "true",
              "team": "Devops"
            }
          }
        }
      ]
    }
  ]
}